--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "all-about-solidity",
-  "version": "0.0.1",
-  "main": "index.js",
-  "author": "Kira272921",
-  "license": "MIT",
-  "dependencies": {
-    "hardhat": "^2.8.4"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4"
-  }
+    "name": "solidity-quickstart",
+    "version": "0.0.1",
+    "main": "index.js",
+    "author": "Kira272921",
+    "license": "MIT",
+    "scripts": {
+        "htrun": "npx hardhat run scripts/run.js"
+    },
+    "dependencies": {
+        "hardhat": "^2.8.4"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.5",
+        "@nomiclabs/hardhat-waffle": "^2.0.2",
+        "chai": "^4.3.6",
+        "ethereum-waffle": "^3.4.0",
+        "ethers": "^5.5.4"
+    }
 }
