--- a/.github/workflows/congrats.yml
+++ b/.github/workflows/congrats.yml
@@ -1,12 +1,12 @@
-name: Congrats on completing the challenge 🎉
-
 on:
   issues:
-    types: ["submission"]
+    types: [labeled]
 
 jobs:
   congrats:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ../../src/packages/github-action/
+      - name: congrats
+        uses: ../../src/packages/github-action/
+        with:
+          label: submission
