feat: ✨feat added xsol!
Co-authored-by: Avneesh Agarwal <avneeshagarwal0612@gmail.com>

--- a/src/bot/package.json
+++ b/src/bot/package.json
@@ -6,11 +6,15 @@
   "license": "MIT",
   "scripts": {
     "start": "node src/bot.js",
-    "dev": "nodemon src/bot.js"
+    "dev": "nodemon src/bot.js",
+    "init-sdk": "node src/scripts/init-sdk.script.js"
   },
   "dependencies": {
+    "@3rdweb/sdk": "^1.41.5",
+    "axios": "^0.26.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "ethers": "^5.5.4",
     "mongoose": "^6.2.4",
     "web3": "^1.7.1"
   },
